fixe chemin css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {        
     font-family: "Chellyne";
-    src: url("../fonts/Chellyne.ttf") format("truetype");
+    src: url("../fonts/Chellyne/Chellyne.ttf") format("truetype");
 }
 
 @font-face {        
