--- a/css/styles.css
+++ b/css/styles.css
@@ -122,41 +122,36 @@ body {
 } 
 
 header {
-    display: contents;
-}
-.headcolor {
+    display: flex;
     background-color: var(--jaune);
-    height: 10em;
-    width:100vw;
-  
+    width: 100vw;
+    
 }
+
 main {
     margin:1.5em;
              
 }
 
 .infos {
-   /*display: flex;
-   flex-direction: row;*/
-    margin-left: 15%;
-    padding-left: 1em;
+    /*margin-left: 5%;
+    padding-left: 1em;*/
+    width: 80%;
     }
 
 .title {
-    display: flex;
-    flex-direction: column;
+    /*display: flex;
+    flex-direction: row;
     justify-content: center;
-    padding: 1em 1em 1em 1em;
-    width: 30%;
+    padding: 1em 1em 1em 1em;*/
+    width: 20%;
    }
 
 
 
 
 .ed_img {
-    /*display: block;*/
-    width: 30%;
-   
+    width: 100px;   
   }
 
 #name {
@@ -173,27 +168,20 @@ main {
     font-family: var(--Montserrat);
     padding-bottom:0.3em}
 
-.job {
-    /*display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    width: 60vw;*/
-   }
+
 
 blockquote { 
+    
     font-family: "Suavity";
     font-size: 1.5em;
     font-style: italic;
-    color: var(--rose);
+    color: var(--shadowgrey);
     text-align: left;
-    display: inline;
+    line-height: 2em;
 }
-
- 
-
-
+#blockquote1 { 
+    padding-top: 7%;
+}
  
 .introduction {
     text-align: left;
@@ -346,15 +334,18 @@ nav li:hover {
         border-radius: 1em;
         color: var(--grey);
         box-shadow:5px 5px 5px var(--shadowgrey);
+        margin-top: 3%;
     }
+
 .diplom h3 {
     background-color: var(--jaune);
-}
+   }
 
   
     footer{
         background-color: var(--noir);
-        padding-top: 2em;
+        margin-top: 5%;
+        padding-top: 5%;
         display: flex;
         flex-direction: row;
         color: var(--blanc);
@@ -409,4 +400,8 @@ portrait correspond à la résolution du type portable longueur > largeur */
     .col{
         width:80%;
     }
+}
+
+@media (min-width: 400px){
+    .ed_img {width: 70%;} 
 }
